[gd_scene load_steps=14 format=2]

[ext_resource path="res://Images/Thoughts1.png" type="Texture" id=1]
[ext_resource path="res://Images/Thoughts2.png" type="Texture" id=2]
[ext_resource path="res://Images/Thoughts.png" type="Texture" id=3]
[ext_resource path="res://Images/Thoughts3.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Thoughts.gd" type="Script" id=5]
[ext_resource path="res://Images/ThoughtsCheck.png" type="Texture" id=6]
[ext_resource path="res://Images/ThoughtsCross.png" type="Texture" id=7]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Animation" id=1]
resource_name = "Wobble"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BubbleCheck:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.3, 2 ),
"transitions": PoolRealArray( 1, 0.267943, 1, 0.353554 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Bubble1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bubble2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bubble3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.1, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BubbleBig:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "thoughts_are_visible"
}, {
"args": [  ],
"method": "switch_anims"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BubbleCheck:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( -0.1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("WhiteFade:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.7 ),
"transitions": PoolRealArray( 0.378929, 0.840896, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_fade"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WhiteFade:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BubbleCheck:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BubbleBig:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 54.6809
height = 27.8742

[node name="Thoughts" type="Area2D"]
collision_mask = 0
script = ExtResource( 5 )

[node name="Bubble1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -155 )

[node name="Bubble2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -155 )
__meta__ = {
"_editor_description_": ""
}

[node name="Bubble3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -155 )

[node name="BubbleBig" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -155 )

[node name="WhiteFade" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 443.379, -89.5055 )
scale = Vector2( 1.77431, 2730.37 )
texture = SubResource( 6 )

[node name="BubbleCheck" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.6 )

[node name="Check" type="Sprite" parent="BubbleCheck"]
texture = ExtResource( 6 )
centered = false
offset = Vector2( 0, -155 )

[node name="Cross" type="Sprite" parent="BubbleCheck"]
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -155 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Wobble = SubResource( 1 )
anims/appear = SubResource( 2 )
anims/fade = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 84.8527, -92.9844 )
rotation = 1.5708
shape = SubResource( 3 )
